--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -25,15 +25,15 @@ jobs:
       with:
           start: yarn ea-start-testing-db
           command: yarn ea-cypress-run
-
-    - run: ls -a
-    - run: ls ./cypress
-    - run: ls cypress
       
     - uses: actions/upload-artifact@v1
       if: failure()
       with:
-        name: Upload artifacts
-        path: |
-          cypress/screenshots
-          cypress/videos
+        name: Upload screenshots
+        path: cypress/screenshots
+        
+    - uses: actions/upload-artifact@v1
+      if: failure()
+      with:
+        name: Upload videos
+        path: cypress/videos
