--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "start": "NODE_OPTIONS=--max_old_space_size=8192 ./build.js --no-clear -run -watch --settings settings.json",
     "start-dev-db": "./build.js --no-clear -run --watch --mongoUrlFile ../LessWrong-Credentials/connectionStrings/dev-db.txt --settings ../LessWrong-Credentials/settings-local-dev-devdb.json",
     "start-prod-db": "./build.js --no-clear -run --watch --mongoUrlFile ../LessWrong-Credentials/connectionStrings/prod-db.txt --settings ../LessWrong-Credentials/settings-local-dev-proddb.json",
+    "start-testing-db": "./build.js --no-clear -run --watch --mongoUrlFile ../LessWrong-Credentials/connectionStrings/testing-db.txt --settings ./settings-test.json",
     "shell": "./build.js --no-clear -run --settings settings.json --shell",
     "shell-dev-db": "./build.js --no-clear -run --mongoUrlFile ../LessWrong-Credentials/connectionStrings/dev-db.txt --settings ../LessWrong-Credentials/settings-local-dev-devdb.json --shell",
     "shell-prod-db": "./build.js --no-clear -run --mongoUrlFile ../LessWrong-Credentials/connectionStrings/prod-db.txt --settings ../LessWrong-Credentials/settings-local-dev-proddb.json --shell",
     "start-af": "./build.js --no-clear -run --watch --settings settings-af.json",
     "start-af-dev-db": "./build.js --no-clear -run --watch --mongoUrlFile ../LessWrong-Credentials/connectionStrings/dev-db.txt --settings ../LessWrong-Credentials/settings-local-dev-af-devdb.json",
     "start-af-prod-db": "./build.js --no-clear -run --watch --mongoUrlFile ../LessWrong-Credentials/connectionStrings/prod-db.txt --settings ../LessWrong-Credentials/settings-local-dev-af-proddb.json",
+    "start-af-testing-db": "./build.js --no-clear -run --watch --mongoUrlFile ../LessWrong-Credentials/connectionStrings/testing-db.txt --settings ./settings-test.json",
+    "cypress-run": "yarn cypress run --env TESTING_DB_URL=${TESTING_DB_URL:=$(cat ../LessWrong-Credentials/connectionStrings/testing-db.txt)}",
+    "cypress-open": "yarn cypress open --env TESTING_DB_URL=${TESTING_DB_URL:=$(cat ../LessWrong-Credentials/connectionStrings/testing-db.txt)}",
     "test": "jest --forceExit",
     "test-ci": "jest --forceExit --ci",
     "test-watch": "jest --watchAll",
@@ -29,7 +33,7 @@
     "ea-start": "./build.js -run -watch --settings ../ForumCredentials/settings-dev.json --mongoUrlFile ../ForumCredentials/dev-db-conn.txt",
     "ea-start-staging-db": "./build.js -run --watch --mongoUrlFile ../ForumCredentials/staging-db-conn.txt --settings ../ForumCredentials/settings-local-dev-staging-db.json",
     "ea-start-prod-db": "./build.js -run --watch --mongoUrlFile ../ForumCredentials/prod-db-conn.txt --settings ../ForumCredentials/settings-local-dev-prod-db.json",
-    "ea-start-testing-db": "./build.js -run --mongoUrl ${TESTING_DB_URL:=$(cat ../ForumCredentials/testing-db-conn.txt)} --settings ./settings-test.json",
+    "ea-start-testing-db": "./build.js -run --mongoUrl ${TESTING_DB_URL:=$(cat ../ForumCredentials/testing-db-conn.txt)} --settings ./ea-settings-test.json",
     "ea-cypress-run": "yarn cypress run --env TESTING_DB_URL=${TESTING_DB_URL:=$(cat ../ForumCredentials/testing-db-conn.txt)}",
     "ea-cypress-open": "yarn cypress open --env TESTING_DB_URL=${TESTING_DB_URL:=$(cat ../ForumCredentials/testing-db-conn.txt)}",
     "ea-mongod": "mongod --dbpath .meteor/local/db --port 3001",
