--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LessWrong",
+  "name": "lesswrong",
   "version": "2.1.0",
   "scripts": {
     "postinstall": "scripts/postinstall.sh",
