--- a/.github/workflows/deployEADev.yaml
+++ b/.github/workflows/deployEADev.yaml
@@ -1,18 +1,17 @@
-# TODO; rename
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Deploy LW-Devel
+name: Deploy Staging
 on:
   push:
-    branches: [ expressNotMeteor, tryDeploying, deployLessestWrong, devel ]
+    branches: [ ea-dev, ea-master ]
 jobs:
-  deploy: 
+  deploy:
     runs-on: ubuntu-latest
     strategy:
-      matrix: 
+      matrix:
         node-version: [15.x]
-        environment: [LessestWrong]
+        environment: [EAForum-Staging-2]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
@@ -21,7 +20,7 @@ jobs:
     - run: pip3 install --upgrade pip awsebcli
     - name: Run EB Deploy
       run: eb deploy --timeout 20 ${{ matrix.environment }}
-      env: 
+      env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: "us-east-1"
