--- a/.github/workflows/deployEADev.yaml
+++ b/.github/workflows/deployEADev.yaml
@@ -4,7 +4,7 @@
 name: Deploy Staging
 on:
   push:
-    branches: [ ea-staging, ea-deploy ]
+    branches: [ ea-staging, ea-deploy, master ]
 jobs:
   deploy:
     runs-on: ubuntu-latest
